--- a/src/DemoUI/src/Views/oldtemplates.html
+++ b/src/DemoUI/src/Views/oldtemplates.html
@@ -352,7 +352,7 @@
         </div>
         <div class="row">
             <div class="pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="title-national" tabindex="-1">
                         National
@@ -362,7 +362,7 @@
         </div>
         <div class="row">
             <div class="pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="title-international" tabindex="-1">
                         International
@@ -377,7 +377,7 @@
         </div>
         <div class="row">
             <div class="pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="deliveryType-economic" tabindex="-1">
                         Economic
@@ -387,7 +387,7 @@
         </div>
         <div class="row">
             <div class="pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="deliveryType-express" tabindex="-1">
                         Express
@@ -402,7 +402,7 @@
         </div>
         <div class="row">
             <div class="pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="parcelOrigin-pickup" tabindex="-1">
                         Collection
@@ -412,7 +412,7 @@
         </div>
         <div class="row">
             <div class=" pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="parcelOrigin-dropoff" tabindex="-1">
                         Drop off
@@ -428,7 +428,7 @@
         </div>
         <div class="row">
             <div class=" pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="parcelDestination-home" tabindex="-1">
                         Delivery
@@ -438,7 +438,7 @@
         </div>
         <div class="row">
             <div class=" pl-filter-method-item">
-                <div class="md-checkbox">
+                <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" data-pl-shipping-methods-filter="parcelDestination-dropoff"
                                tabindex="-1">
@@ -490,7 +490,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="md-checkbox">
+                                        <div class="pl-checkbox">
                                             <label class="pl-form-section-input-checkbox-label">
                                                 <input type="checkbox" name="method-show-logo-input" checked
                                                        id="pl-show-logo">
@@ -507,7 +507,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="md-checkbox">
+                                        <div class="pl-checkbox">
                                             <label class="pl-form-section-input-checkbox-label">
                                                 <input type="checkbox" name="method-all-countries-input"
                                                        id="pl-country-selector-checkbox">
@@ -965,7 +965,7 @@
                 </div>
 
                 <div class="pl-system-info-panel-content">
-                    <div class="md-checkbox">
+                    <div class="pl-checkbox">
                         <label class="pl-form-section-input-checkbox-label">
                             <input type="checkbox" id="pl-debug-mode-checkbox">
                             <b>Debug mode</b>
