--- a/src/BusinessLogic/Resources/scss/utility.scss
+++ b/src/BusinessLogic/Resources/scss/utility.scss
@@ -59,6 +59,10 @@
     width: 100%;
   }
 
+  .pl-flex-start {
+    align-items: flex-start;
+  }
+
   .pl-text-align-left {
     text-align: left;
   }
