--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -59,7 +59,7 @@
                     {$register.submit}
                 </button>
             </div>
-            <div class="pl-legal-policies">
+            <div class="pl-legal-policies pl-flex-start">
                 <div class="pl-checkbox">
                     <label id="pl-register-terms-and-conditions-label">
                         <input type="checkbox" name="terms_and_conditions" id="pl-register-terms-and-conditions"
@@ -67,7 +67,7 @@
                     </label>
                 </div>
             </div>
-            <div class="pl-legal-policies pl-marketing-emails-wrapper">
+            <div class="pl-legal-policies pl-marketing-emails-wrapper pl-flex-start">
                 <div class="pl-checkbox">
                     <label>
                         <input type="checkbox" name="marketing_emails" id="pl-register-marketing-emails" tabindex="-1">
