--- a/src/BusinessLogic/Resources/scss/reset.scss
+++ b/src/BusinessLogic/Resources/scss/reset.scss
@@ -25,15 +25,15 @@
   display: flex;
   flex-direction: column;
   background-color: $color-white;
-  height: 100%;
+  min-height: 100%;
   position: relative;
-
 
   template {
     display: none;
   }
 
   * {
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: pl-proxima-nova, sans-serif;
@@ -43,10 +43,27 @@
     font-style: normal;
     vertical-align: baseline;
     color: $text-color;
-  }
-
-  *, *::before, *::after {
     box-sizing: border-box;
+
+    scrollbar-color: $color-blue $border-color;
+
+    &::-webkit-scrollbar {
+      height: 10px;
+      width: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background-color: $color-blue;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: $border-color;
+    }
+
+    &::before, &::after {
+      box-sizing: border-box;
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -96,5 +113,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  button, .pl-button, input, select, textarea {
+    outline: none;
+
+    &:focus, &:active {
+      outline: none;
+    }
   }
 }
