--- a/src/BusinessLogic/Resources/scss/variables.scss
+++ b/src/BusinessLogic/Resources/scss/variables.scss
@@ -10,7 +10,7 @@ $color-blue-darker: rgba(32, 149, 242, .7);
 $color-navy-dark: #2E4265;
 $color-gray: #9B9B9B;
 $color-light: #E1E1E1;
-$color-red: #df341c;
+$color-red: #e63f3f;
 
 $color-little-transparent: rgba(216, 216, 216, 0.8);
 $color-semi-transparent: rgba(255, 255, 255, 0.5);
