--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -11,34 +11,30 @@
         <form method="POST" name="plRegisterForm" id="pl-register-form" class="pl-full-width">
             <div>
                 <div class="pl-form-group">
+                    <input id="pl-register-email" type="email" class="form-control" name="email"/>
                     <label for="pl-register-email">
                         {$register.email}
                     </label>
-                    <input id="pl-register-email" type="email" class="form-control" name="email" required />
                 </div>
                 <div class="pl-form-group pl-bottom-separate">
-                    <label for="pl-register-password">
-                        {$register.password}
-                    </label>
                     <input id="pl-register-password"
                            type="password"
                            class="form-control"
                            name="password"
                            minlength="6"
                            data-min-length="6"
-                           required/>
+                    />
+                    <label for="pl-register-password">
+                        {$register.password}
+                    </label>
                 </div>
                 <p class="pl-text-center">
                     {$register.getToKnowYou}
                 </p>
                 <div class="pl-form-group" id="pl-register-delivery-volume">
-                    <label for="pl-register-shipment-volume" class="pl-text-input-label">
-                        {$register.monthlyShipmentVolume}
-                    </label>
                     <select class=form-control"
                             name="estimated_delivery_volume"
-                            id="pl-register-shipment-volume"
-                            required>
+                            id="pl-register-shipment-volume">
                         <option disabled selected value></option>
                         <option value="1 - 10">1 - 10</option>
                         <option value="11 - 50">11 - 50</option>
@@ -46,12 +42,16 @@
                         <option value="101 - 200">101 - 200</option>
                         <option value="> 200">> 200</option>
                     </select>
+                    <i class="material-icons">expand_more</i>
+                    <label for="pl-register-shipment-volume" class="pl-text-input-label">
+                        {$register.monthlyShipmentVolume}
+                    </label>
                 </div>
                 <div class="pl-form-group">
+                    <input id="pl-register-phone" type="text" class="form-control" name="phone"/>
                     <label for="pl-register-phone">
                         {$register.phone}
                     </label>
-                    <input id="pl-register-phone" type="text" class="form-control" name="phone" required />
                 </div>
             </div>
             <div>
@@ -60,23 +60,22 @@
                 </button>
             </div>
             <div class="pl-legal-policies pl-flex-start">
-                <div class="pl-checkbox">
-                    <label id="pl-register-terms-and-conditions-label">
-                        <input type="checkbox" name="terms_and_conditions" id="pl-register-terms-and-conditions"
-                               tabindex="-1" required>
-                    </label>
+                <div class="pl-checkbox" id="pl-register-terms-and-conditions-label">
+                    <input type="checkbox" name="terms_and_conditions" id="pl-register-terms-and-conditions"
+                           tabindex="-1">
+                    <label for="pl-register-terms-and-conditions"></label>
                 </div>
             </div>
             <div class="pl-legal-policies pl-marketing-emails-wrapper pl-flex-start">
                 <div class="pl-checkbox">
-                    <label>
-                        <input type="checkbox" name="marketing_emails" id="pl-register-marketing-emails" tabindex="-1">
-                        {$register.marketingEmails}
-                    </label>
+                    <input type="checkbox" name="marketing_emails" id="pl-register-marketing-emails" tabindex="-1">
+                    <label for="pl-register-marketing-emails">{$register.marketingEmails}</label>
                 </div>
             </div>
-            <input type="hidden" name="platform_country" id="pl-register-platform-country" />
-            <input type="hidden" name="source" id="pl-register-source" />
+            <div class="pl-hidden">
+                <input type="hidden" name="platform_country" id="pl-register-platform-country"/>
+                <input type="hidden" name="source" id="pl-register-source"/>
+            </div>
         </form>
     </div>
     <div class="pl-full-width pl-login-footer pl-page-padding">
