--- a/src/BusinessLogic/Resources/templates/default-parcel.html
+++ b/src/BusinessLogic/Resources/templates/default-parcel.html
@@ -1,8 +1,8 @@
 <div class="pl-default-parcel-page pl-flex-expand">
     <div class="pl-flex-expand pl-text-center pl-justify-f-start">
-        <div class="pl-bottom-separate pl-w-100">
-            <h1 class="pl-text-center pl-w-100 pl-m-30">
-                <button id="pl-parcel-back" class="pl-icon-wrapper pl-float-left">
+        <div class="pl-bottom-separate pl-full-width">
+            <h1 class="pl-text-center pl-full-width pl-m-30">
+                <button id="pl-parcel-back" class="pl-icon-wrapper pl-pull-left">
                     <i class="material-icons pl-back-arrow">keyboard_backspace</i>
                 </button>
                 <span class="pl-header-text-wrapper"></span>
@@ -37,7 +37,7 @@
                     <input type="text" id="pl-default-parcel-length" name="length"/>
                 </div>
             </div>
-            <div>
+            <div class="pl-page-buttons">
                 <button id="pl-default-parcel-submit-btn"
                         type="submit"
                         name="defaultParcelSubmit"
