--- a/src/BusinessLogic/Resources/templates/onboarding-overview.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-overview.html
@@ -10,7 +10,7 @@
                 {$onboardingOverview.header}
             </h1>
         </div>
-        <div class="pl-w-85 pl-onboarding-overview-list">
+        <div class="pl-onboarding-overview-list">
             <div class="pl-list-item pl-parcel-wrapper">
                 <i class="pl-info-icon-ok pl-display-none">J</i>
                 <i class="pl-info-icon-x pl-display-none">X</i>
@@ -56,7 +56,7 @@
                 </p>
             </div>
         </div>
-        <div class="pl-w-85 pl-responsive-docked-btn-wrapper">
+        <div class="pl-responsive-docked-btn-wrapper">
             <button id="pl-onboarding-overview-button" type="submit" name="onboardingOverview"
                     class="pl-button pl-button-primary">
                 {$onboardingOverview.continue}
