Update on-boarding welcome page
Issue: PLCR1802-26

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -137,6 +137,7 @@
       position: fixed;
       bottom: 0;
       width: 100%;
+      padding: 20px;
     }
 
     .pl-onboarding-overview-mobile-header {
