--- a/src/BusinessLogic/Resources/templates/onboarding-welcome.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-welcome.html
@@ -1,5 +1,5 @@
 <div class="pl-onboarding-welcome-page pl-flex-expand">
-    <div class="pl-flex-expand pl-text-center pl-page-padding pl-justify-f-start">
+    <div class="pl-flex-expand pl-text-center pl-page-padding">
         <h1>
             {$onboardingWelcome.header}
         </h1>
