--- a/src/BusinessLogic/Resources/scss/variables.scss
+++ b/src/BusinessLogic/Resources/scss/variables.scss
@@ -14,3 +14,5 @@ $color-red: #e63f3f;
 
 $color-little-transparent: rgba(216, 216, 216, 0.8);
 $color-semi-transparent: rgba(255, 255, 255, 0.5);
+
+$icon-button-size: 24px;
