--- a/src/BusinessLogic/Resources/templates/onboarding-overview.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-overview.html
@@ -1,5 +1,5 @@
-<div class="pl-onboarding-overview-page pl-flex-expand">
-    <div class="pl-onboarding-overview-mobile-header">
+<div class="pl-onboarding-overview-page pl-flex-expand pl-medium-page">
+    <div>
         <strong>
             {$onboardingOverview.myShipmentServices}:
         </strong>
@@ -15,7 +15,7 @@
                 <i class="pl-info-icon-ok pl-display-none">J</i>
                 <i class="pl-info-icon-x pl-display-none">X</i>
                 <p class="pl-onboarding-list-title">{$onboardingOverview.parcelDetails}</p>
-                <p id="pl-parcel-details" class="pl-display-none pl-text-align-left">
+                <p id="pl-parcel-details" class="pl-display-none pl-text-left">
                     <span class="pl-min-width-81">
                         <span>{$defaultParcel.weight} <span id="pl-parcel-weight"></span> kg </span> |
                         <span>{$defaultParcel.height} <span id="pl-parcel-height"></span> cm </span> |
@@ -26,7 +26,7 @@
                         {$onboardingOverview.edit}
                     </button>
                 </p>
-                <p class="pl-onboarding-missing-info pl-display-none pl-text-align-left">
+                <p class="pl-onboarding-missing-info pl-display-none pl-text-left">
                     <span class="pl-min-width-81">
                         {$onboardingOverview.missingInfo}
                     </span>
@@ -40,7 +40,7 @@
                 <i class="pl-info-icon-ok pl-display-none">J</i>
                 <i class="pl-info-icon-x pl-display-none">X</i>
                 <p class="pl-onboarding-list-title">{$onboardingOverview.senderAddress}</p>
-                <p id="pl-wh-details" class="pl-display-none pl-text-align-left">
+                <p id="pl-wh-details" class="pl-display-none pl-text-left">
                     <span class="pl-min-width-81">
                         <span id="pl-wh-alias"></span> |
                         <span id="pl-wh-user"></span> |
@@ -48,7 +48,7 @@
                     </span>
                     <button class="pl-button pl-button-secondary pl-small">{$onboardingOverview.edit}</button>
                 </p>
-                <p class="pl-onboarding-missing-info pl-display-none pl-text-align-left">
+                <p class="pl-onboarding-missing-info pl-display-none pl-text-left">
                      <span class="pl-min-width-81">
                         {$onboardingOverview.missingInfo}
                     </span>
