--- a/src/BusinessLogic/Resources/templates/onboarding-welcome.html
+++ b/src/BusinessLogic/Resources/templates/onboarding-welcome.html
@@ -1,4 +1,4 @@
-<div class="pl-onboarding-welcome-page pl-flex-expand">
+<div class="pl-onboarding-welcome-page pl-flex-expand pl-medium-page">
     <div class="pl-flex-expand pl-text-center pl-page-padding">
         <h1>
             {$onboardingWelcome.header}
@@ -15,12 +15,12 @@
                     2. {$onboardingWelcome.stepTwo}
                 </div>
             </div>
-            <div class="pl-page-buttons">
-                <button id="pl-onboarding-welcome-button" type="submit" name="onboardingWelcome"
-                        class="pl-button pl-button-primary pl-no-wrap">
-                    {$onboardingWelcome.startSetUp}
-                </button>
-            </div>
+        </div>
+        <div class="pl-page-buttons">
+            <button id="pl-onboarding-welcome-button" type="submit" name="onboardingWelcome"
+                    class="pl-button pl-button-primary pl-no-wrap">
+                {$onboardingWelcome.startSetUp}
+            </button>
         </div>
     </div>
 </div>
